gitops/platform/kiali/kiali-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kiali
  namespace: istio-system
  annotations:
    cert-manager.io/cluster-issuer: mkcert-ca-issuer
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/app-root: /kiali
spec:
  ingressClassName: nginx
  rules:
    - host: kiali.hy-k8s.home.arpa
      http:
        paths:
          - path: /kiali
            pathType: Prefix
            backend:
              service:
                name: kiali
                port:
                  number: 20001
  tls:
    - hosts:
        - kiali.hy-k8s.home.arpa
      secretName: kiali-tls # pragma: allowlist secret
